# birl_baxter_controllers

./: README.md
documentation/: forceController_ReadMe.txt
documentation/doxygen-doc/html/: ____init_____8py.html  ____init_____8py_source.html  annotated.html  classdyn__reconfig__client_1_1DynaClient.html  classes.html  classforce__controller_1_1Kinematics-members.html  classforce__controller_1_1Kinematics.html  classforce__controller_1_1controller.html  dir_000001_000005.html  dir_000004_000005.html  dir_053c50be511477483dc17936e7722dc9_dep.map  dir_053c50be511477483dc17936e7722dc9_dep.md5  dir_7cb4cdcdfa1df2c138f43133c935396f_dep.md5  dir_962a0703f2b3a5c7a2ff3b4dbd953780.html  dir_962a0703f2b3a5c7a2ff3b4dbd953780_dep.map  dir_985d95b28ab4f43769913fa694f4df18.html  dir_985d95b28ab4f43769913fa694f4df18_dep.map  dir_985d95b28ab4f43769913fa694f4df18_dep.md5  dir_9c1df391afb0d62e5ff4608cb0fdbcd8.html  dir_9c1df391afb0d62e5ff4608cb0fdbcd8_dep.map  dir_b73a4e7673ba930ffa2940abb1117970.html  dir_b73a4e7673ba930ffa2940abb1117970_dep.map  dir_e7114b569024e7c03d4594801a6eebab_dep.map  dir_f241816ecfb4bce6f43939aebcbd1cab_dep.map  files.html  force__control__srv__client_8cpp.html  force__control__srv__client_8cpp__incl.map  force__control__srv__client_8cpp__incl.md5  force__control__srv__client_8cpp_source.html  force__controller__service_8cpp.html  force__controller__service_8cpp__incl.md5  force__controller__service_8cpp_source.html  force__controller__service_8h.html  force__controller__service_8h__dep__incl.map  force__controller__topic_8cpp.html  force__controller__topic_8cpp__incl.map  force__controller__topic_8cpp__incl.md5  force__controller__topic_8cpp_source.html  force__controller__topic_8h__dep__incl.map  force__controller__topic_8h__dep__incl.md5  (+22 more)
documentation/doxygen-doc/html/msg/: setPoint.html
documentation/doxygen-doc/html/srv/: forceControl.html
force_controller/: CMakeLists.txt  force_control.msg  package.xml  setup.py
force_controller/cfg/: force_error_constants.cfg
force_controller/debug/: debuginfo.txt
force_controller/documentation/: Porting execute in position controller to the force controller  Porting execute in position controller to the force controller~  Readme.txt  how_to_call_service_force_controller.txt  subscriptionTopics_Rates.txt
force_controller/documentation/doxygen-doc/: manifest.yaml
force_controller/documentation/doxygen-doc/html/: classdyn__reconfig__client_1_1DynaClient-members.html  classforce__controller_1_1controller-members.html  dir_000007_000005.html  dir_053c50be511477483dc17936e7722dc9.html  dir_7cb4cdcdfa1df2c138f43133c935396f.html  dir_7cb4cdcdfa1df2c138f43133c935396f_dep.map  dir_962a0703f2b3a5c7a2ff3b4dbd953780_dep.md5  dir_9c1df391afb0d62e5ff4608cb0fdbcd8_dep.md5  dir_b73a4e7673ba930ffa2940abb1117970_dep.md5  dir_e7114b569024e7c03d4594801a6eebab.html  dir_e7114b569024e7c03d4594801a6eebab_dep.md5  dir_f241816ecfb4bce6f43939aebcbd1cab.html  dir_f241816ecfb4bce6f43939aebcbd1cab_dep.md5  dyn__reconfig__client_8py.html  dyn__reconfig__client_8py_source.html  force__controller__service_8cpp__incl.map  force__controller__service_8h__dep__incl.md5  force__controller__service_8h__incl.map  force__controller__service_8h__incl.md5  force__controller__service_8h_source.html  force__controller__topic_8h.html  force__controller__topic_8h__incl.map  force__controller__topic_8h__incl.md5  functions.html  functions_func.html  kinematics_8cpp.html  kinematics_8cpp__incl.md5  kinematics_8cpp_source.html  kinematics_8h.html  kinematics_8h__incl.md5  namespacedyn__reconfig__client.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  setPoint__publisher_8cpp__incl.md5  setPoint__publisher_8cpp_source.html  structforce__controller_1_1INFO-members.html  structforce__controller_1_1INFO.html
force_controller/documentation/doxygen-doc/html/msg/: ctrl_basis.html  force_control.html
force_controller/include/force_controller/: controller.h  force_controller_service.h  force_controller_topic.h  kinematics.h
force_controller/launch/: #right_pubsub_controller.launch#  left_client_controller.launch  left_force_controller_topic.launch  left_pubsub_controller.launch  right_client_controller.launch  right_force_controller_topic.launch  setPoint_publisher.launch
force_controller/launch/service_controller/: left_server_controller.launch  right_server_controller.launch
force_controller/launch/setPoint_publisher/: setPoint_publisher.launch
force_controller/launch/topic_controller/: left_force_controller_topic.launch  right_force_controller_topic.launch
force_controller/msg/: ctrl_basis.msg  setPoint.msg
force_controller/scripts/: dyn_reconfig_client.py  dyn_reconfig_client.py~
force_controller/src/: #force_controller_topic.cpp#  controller.cpp  force_contr_pubsub.cpp  force_controller_service.cpp  force_controller_topic.cpp  kinematics.cpp
force_controller/src/force_control_srv_client/: force_control_srv_client.cpp  force_control_srv_client.cpp.localNode  force_control_srv_client.cpp.original
force_controller/src/setPoint/: setPoint_publisher.cpp
force_controller/srv/: forceControl.srv
imped_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
imped_control/config/: baxter_imped_controller.yaml  controller_plugins.xml  controller_plugins.xml~  pr2_arms_cart_imped_controller.yaml
imped_control/launch/: r_arm_cart_imped_controller.launch  r_arm_cart_imped_controller.launch~
imped_control/src/: .#imped_control.cpp
position_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
position_controller/documentation/: ReadMe.txt  ReadMe.txt~  how_to_publish_topic_position_control.txt  how_to_publish_topic_position_control.txt~
position_controller/include/position_controller/: initialPose.h  initialPose.h~
position_controller/launch/: position_controller.launch  position_controller.launch~
position_controller/src/: initialPose.cpp  initialPose.cpp~
