<?xml version="1.0"?>
<package>
  <name>force_controller</name>
  <version>0.0.0</version>
  <description>The force_controller package</description>

  <maintainer email="ixchel@todo.todo">ixchel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
